add github link
add github link

--- a/end-to-end-speech-recognition-jagseongjung.html
+++ b/end-to-end-speech-recognition-jagseongjung.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/end-to-end-speech-recognition-jagseongjung.html">
+<link rel="canonical" href="https://freeeebie.github.io/end-to-end-speech-recognition-jagseongjung.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content=""Machine&nbsp,Learning"" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="End-to-End Speech Recognition - 작성중"/>
-        <meta property="og:url" content="/end-to-end-speech-recognition-jagseongjung.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/end-to-end-speech-recognition-jagseongjung.html"/>
         <meta property="og:description" content="해당 글은 &#34;Towards End-to-End Speech Recognition with Recurrent Neural Networks&#34; 를 기반하여 공부한 내용을 작성하였다. 기존에 Neural Network을 적용한 음성 인식 모델은 여러 단계 중 하나의 단계, 즉 classify 를 위하여 NN 을 사용하였다. 기존 모델의 동작 파이프라인을 개략적으로 나타내면 아래와 같다. Feature extraction : MFCC 와 같은 단계를 의미한다. Speaker …"/>
         <meta property="article:published_time" content="2017-06-24" />
             <meta property="article:section" content="misc" />
@@ -28,15 +28,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log misc ATOM Feed"/>
 
 </head>
 <body>
@@ -50,16 +54,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -77,7 +81,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/end-to-end-speech-recognition-jagseongjung.html"
+                    <a href="https://freeeebie.github.io/end-to-end-speech-recognition-jagseongjung.html"
                        rel="bookmark"
                        title="Permalink to End-to-End Speech Recognition - 작성중">
                         End-to-End Speech Recognition - 작성중
@@ -98,9 +102,9 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/machinenbsp.html">"Machine&nbsp</a>
+	<a href="https://freeeebie.github.io/tag/machinenbsp.html">"Machine&nbsp</a>
         /
-	<a href="/tag/learning.html">Learning"</a>
+	<a href="https://freeeebie.github.io/tag/learning.html">Learning"</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -138,6 +142,15 @@ Log            </a>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -156,13 +169,13 @@ Log            </a>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
