--- a/mle.html
+++ b/mle.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/mle.html">
+<link rel="canonical" href="https://freeeebie.github.io/mle.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="math" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="MLE"/>
-        <meta property="og:url" content="/mle.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/mle.html"/>
         <meta property="og:description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-09-18" />
             <meta property="article:section" content="misc" />
@@ -27,15 +27,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log misc ATOM Feed"/>
 
 </head>
 <body>
@@ -49,16 +53,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -76,7 +80,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/mle.html"
+                    <a href="https://freeeebie.github.io/mle.html"
                        rel="bookmark"
                        title="Permalink to MLE">
                         MLE
@@ -97,7 +101,7 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/math.html">math</a>
+	<a href="https://freeeebie.github.io/tag/math.html">math</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -184,6 +188,15 @@ Log            </a>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -202,13 +215,13 @@ Log            </a>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
