--- a/authors.html
+++ b/authors.html
@@ -16,17 +16,19 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Log"/>
-        <meta property="og:url" content=""/>
+        <meta property="og:url" content="https://freeeebie.github.io"/>
         <meta property="og:description" content="Log"/>
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
 
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
@@ -43,16 +45,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -67,14 +69,23 @@ Log            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Log</h1>
-        <li><a href="/author/freeeebie.html">freeeebie</a> (7)</li>
-        <li><a href="/author/me.html">me</a> (1)</li>
+        <li><a href="https://freeeebie.github.io/author/freeeebie.html">freeeebie</a> (7)</li>
+        <li><a href="https://freeeebie.github.io/author/me.html">me</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -93,13 +104,13 @@ Log            </a>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
