--- a/bst-node-count.html
+++ b/bst-node-count.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/bst-node-count.html">
+<link rel="canonical" href="https://freeeebie.github.io/bst-node-count.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="algorithm" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="BST node count"/>
-        <meta property="og:url" content="/bst-node-count.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/bst-node-count.html"/>
         <meta property="og:description" content="BST 에서 node 갯수 세기 left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기 입력 node 보다 작은 숫자 구하기 start root 만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동 만약 입력 데이터보다 …"/>
         <meta property="article:published_time" content="2016-10-02" />
             <meta property="article:section" content="misc" />
@@ -27,15 +27,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log misc ATOM Feed"/>
 
 </head>
 <body>
@@ -49,16 +53,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -76,7 +80,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/bst-node-count.html"
+                    <a href="https://freeeebie.github.io/bst-node-count.html"
                        rel="bookmark"
                        title="Permalink to BST node count">
                         BST node count
@@ -97,7 +101,7 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/algorithm.html">algorithm</a>
+	<a href="https://freeeebie.github.io/tag/algorithm.html">algorithm</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -159,6 +163,15 @@ https://www.careercup.com/question?id=5165570324430848</p>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -177,13 +190,13 @@ https://www.careercup.com/question?id=5165570324430848</p>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
