--- a/hmm-introduction.html
+++ b/hmm-introduction.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/hmm-introduction.html">
+<link rel="canonical" href="https://freeeebie.github.io/hmm-introduction.html">
 
         <meta name="author" content="me" />
         <meta name="keywords" content="ML" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="HMM Introduction"/>
-        <meta property="og:url" content="/hmm-introduction.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/hmm-introduction.html"/>
         <meta property="og:description" content="Hidden Markov Model(HMM)이란 Markov Model 중 state 변화에 대하여 관찰자는 알지 못하고, 단지 결과만을 관측할 수 있는 Model 을 의미한다. 즉, state 변화가 hidden 되어 있다는 의미이다."/>
         <meta property="article:published_time" content="2017-02-26" />
             <meta property="article:section" content="posts" />
@@ -27,15 +27,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/posts.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log posts ATOM Feed"/>
 
 </head>
 <body>
@@ -49,16 +53,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -76,7 +80,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/hmm-introduction.html"
+                    <a href="https://freeeebie.github.io/hmm-introduction.html"
                        rel="bookmark"
                        title="Permalink to HMM Introduction">
                         HMM Introduction
@@ -97,7 +101,7 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/ml.html">ML</a>
+	<a href="https://freeeebie.github.io/tag/ml.html">ML</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -1376,6 +1380,15 @@ The steps of states are Healthy Healthy Fever with highest probability of 0.0151
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -1394,13 +1407,13 @@ The steps of states are Healthy Healthy Fever with highest probability of 0.0151
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
