--- a/hwagryul.html
+++ b/hwagryul.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/hwagryul.html">
+<link rel="canonical" href="https://freeeebie.github.io/hwagryul.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content=""Math"" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="확률"/>
-        <meta property="og:url" content="/hwagryul.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/hwagryul.html"/>
         <meta property="og:description" content="확률분포 Random Variable(확률변수) 정의 $$ X:\Omega\Rightarrow R $$ X: 함수 이산확률변수 \(P(X=k)= P(\{w:X(w)=k\})\) Joint probability(결합확률) 확률질량함수 이산데이터에 대하여 누적 확률 누적분포함수 (CDF) 확률값을 적분한 것. 1에 수렴 확률밀도함수 누적분포를 미분한 것 Maginary probability(주변확률) 두 변수중 한가지 확률변수 계산 왜 maginary 인가 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-09-17" />
             <meta property="article:section" content="misc" />
@@ -27,15 +27,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log misc ATOM Feed"/>
 
 </head>
 <body>
@@ -49,16 +53,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -76,7 +80,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/hwagryul.html"
+                    <a href="https://freeeebie.github.io/hwagryul.html"
                        rel="bookmark"
                        title="Permalink to 확률">
                         확률
@@ -97,7 +101,7 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/math.html">"Math"</a>
+	<a href="https://freeeebie.github.io/tag/math.html">"Math"</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -246,6 +250,15 @@ $$</div>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -264,13 +277,13 @@ $$</div>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
