--- a/linear-regression.html
+++ b/linear-regression.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/linear-regression.html">
+<link rel="canonical" href="https://freeeebie.github.io/linear-regression.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="'Machine&nbsp,Learning'" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Linear Regression"/>
-        <meta property="og:url" content="/linear-regression.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/linear-regression.html"/>
         <meta property="og:description" content="다항식 회귀 $$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다. Model Selection 정확도를 어떻게 측정. 최대로 잘 맞는지 overfitting 모델에 비해 data 가 너무 적어 noise 까지 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-10-01" />
             <meta property="article:section" content="misc" />
@@ -28,15 +28,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log misc ATOM Feed"/>
 
 </head>
 <body>
@@ -50,16 +54,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -77,7 +81,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/linear-regression.html"
+                    <a href="https://freeeebie.github.io/linear-regression.html"
                        rel="bookmark"
                        title="Permalink to Linear Regression">
                         Linear Regression
@@ -98,9 +102,9 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/machinenbsp.html">'Machine&nbsp</a>
+	<a href="https://freeeebie.github.io/tag/machinenbsp.html">'Machine&nbsp</a>
         /
-	<a href="/tag/learning.html">Learning'</a>
+	<a href="https://freeeebie.github.io/tag/learning.html">Learning'</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -192,6 +196,15 @@ K-folder Cross Validation (CV)  </p>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -210,13 +223,13 @@ K-folder Cross Validation (CV)  </p>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
