--- a/mfcc.html
+++ b/mfcc.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/mfcc.html">
+<link rel="canonical" href="https://freeeebie.github.io/mfcc.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content=""Machine&nbsp,Learning"" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="MFCC"/>
-        <meta property="og:url" content="/mfcc.html"/>
+        <meta property="og:url" content="https://freeeebie.github.io/mfcc.html"/>
         <meta property="og:description" content="음성 데이터의 특징 추출 성대의 떨림은 고유함.성도를 system H 라고 가정하여 이 시스템 H의 특징을 찾음. 1 step 시그널을 일정 frame 단위로 나눔. windowing 실행 2 step 해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함. 3 step mel filter bank 적용 4 step log 적용 5 step DCT …"/>
         <meta property="article:published_time" content="2016-09-11" />
             <meta property="article:section" content="misc" />
@@ -28,15 +28,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log ATOM Feed"/>
 
 
 
-
+        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Log misc ATOM Feed"/>
 
 </head>
 <body>
@@ -50,16 +54,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="https://freeeebie.github.io/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="/category/posts.html">Posts</a>
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -77,7 +81,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/mfcc.html"
+                    <a href="https://freeeebie.github.io/mfcc.html"
                        rel="bookmark"
                        title="Permalink to MFCC">
                         MFCC
@@ -98,9 +102,9 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/machinenbsp.html">"Machine&nbsp</a>
+	<a href="https://freeeebie.github.io/tag/machinenbsp.html">"Machine&nbsp</a>
         /
-	<a href="/tag/learning.html">Learning"</a>
+	<a href="https://freeeebie.github.io/tag/learning.html">Learning"</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -135,6 +139,15 @@ http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-freque
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="http://github.com/freeeebie"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
@@ -153,13 +166,13 @@ http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-freque
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
 
 
 
